add lesson detail content

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -3,3 +3,11 @@
   color: red;
   font-weight: bold;
 } */
+
+.detail-multi-line ul {
+  list-style-type: disc;
+}
+
+/* .detail-multi-line ul strong {
+  display: block;
+} */
