clean up routing and context usage for lessons and courses

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,8 +1,10 @@
-/* .App {
-  text-align: center;
-  color: red;
-  font-weight: bold;
-} */
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
 
 .detail-multi-line ul {
   list-style-type: disc;
